# code-forms

./: .env.example  .gitignore  Cargo.toml  LICENSE  sqlx-data.json
sql/: text_posts_table.sql  users_table.sql
src/: main.rs
src/auth/: auth.rs  mod.rs
src/post/: delete_post_delete.rs  get_post_list.rs  mod.rs  models.rs  post_post_create.rs  services.rs  sql_text_post.rs
src/user/: get_user_list.rs  mod.rs  models.rs  post_user_login.rs  post_user_signup.rs  services.rs  sql_user.rs
