[package]
name = "code-forms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4"
dotenvy = "0.15.6"
rand_core = { version = "0.6", features = ["std"] }
serde = "1.0.152"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres", "macros", "uuid", "time", "migrate", "offline" ] }
actix-web = "4"